Changes to filestructure and dashboard.

--- a/client/src/client/styles/styles.less
+++ b/client/src/client/styles/styles.less
@@ -791,11 +791,9 @@ form {
 
 .mainbar {
     position: relative;
-    margin-left: 230px;
     margin-right: 0;
     width: auto;
     background: #fff;
-    min-height: 900px;
 }
 
     .mainbar .container {
@@ -994,51 +992,6 @@ form {
     .widget .tab-content {
         margin-bottom: 10px;
     }
-
-/* Today datas */
-
-.today-datas {
-    list-style-type: none;
-    padding: 0;
-    margin: 10px 0;
-}
-
-    .today-datas li {
-        display: inline-block;
-        margin-bottom: 5px;
-        margin-right: 10px;
-        padding: 1.5em 1em;
-        background-color: #f8f8f8;
-        background: #f8f8f8;
-        border: 1px solid #ccc;
-        max-width: 100%;
-        text-align: center;
-    }
-
-        .today-datas li .spark {
-            margin-right: 10px;
-        }
-
-        .today-datas li .datas-text {
-            font-size: 13px;
-            padding: 7px 0 0 0;
-            font-weight: normal;
-        }
-
-            .today-datas li .datas-text span {
-                display: block;
-                font-size: 24px;
-                margin-bottom: 5px;
-            }
-
-        .today-datas li i {
-            font-size: 50px;
-            margin-right: 10px;
-        }
-
-        .today-datas li .dial {
-            margin-right: 10px !important;
-        }
 
 /* Toggle button */
 
@@ -1947,3 +1900,5 @@ a {
 }
 
 /*#endregion */
+
+@import "_dashboard.less";
