--- a/client/src/client/app/layout/ht-top-nav.html
+++ b/client/src/client/app/layout/ht-top-nav.html
@@ -12,18 +12,11 @@
       <ul class="nav navbar-nav pull-right">
         <li>
           <a ng-href="{{vm.navline.link}}" target="_blank">
-                        {{vm.navline.text}}
-                    </a>
+              {{vm.navline.text}}
+          </a>
         </li>
         <li class="dropdown dropdown-big">
-          <a href="http://www.angularjs.org" target="_blank">
-            <img src="images/AngularJS-small.png" />
-          </a>
-        </li>
-        <li>
-          <a href="http://www.gulpjs.com/" target="_blank">
-            <img src="images/gulp-tiny.png" />
-          </a>
+          <a href="http://twitter.com/danielzm" target="_blank"></a>
         </li>
       </ul>
     </div>
