--- a/client/src/client/styles/styles.less
+++ b/client/src/client/styles/styles.less
@@ -5,6 +5,9 @@
 @color_important: #fa3031;
 @color_violet: #932ab6;
 
+@font-bold: 'Oswald', sans-serif;
+@font-light: 'Raleway', sans-serif;
+
 * {
     /*-webkit-box-shadow: none !important;
     -ms-box-shadow: none !important;
@@ -13,15 +16,9 @@
     -webkit-text-shadow: none !important;
     -ms-text-shadow: none !important;
     text-shadow: none !important;*/
-    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
+    font-family: @font-light;
     -webkit-font-smoothing: antialiased;
     /*font-weight: 400;*/
-}
-
-.btn, .badge, .modal, .modal-dialog, .modal-content,
-input, select {
-    -ms-border-radius: 0 !important;
-    border-radius: 0 !important;
 }
 
 input, select {
@@ -38,40 +35,12 @@ input, select {
     text-shadow: none !important;
 }
 
-form * {
-    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
-}
-
-input, textarea {
-    background-image: none !important;
-    border: 1px solid #ccc !important;
-    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
-}
-
-select {
-    font-size: 13px !important;
-    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
-}
-
 input[type="radio"], input[type="checkbox"] {
     margin: 0 0 0 !important;
     margin-right: 5px !important;
     line-height: 23px !important;
     border: 0 !important;
 }
-
-.btn {
-    background-image: none !important;
-    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
-    font-size: 13px !important;
-}
-.btn.btn-form-md {
-    margin: 0 .5em .2em .5em;
-    width: 9em;
-}
-    .btn.btn-mini {
-        font-size: 11px !important;
-    }
 
 body {
     font-size: 13px;
@@ -93,6 +62,7 @@ h1, h2, h3, h4, h5, h6 {
     margin: 2px 0;
     color: #777;
     font-weight: 400;
+    font-family: @font-bold;
 }
 
 h2 {
@@ -364,10 +334,6 @@ a.btn {
 form {
     margin: 10px;
 }
-
-    form input, form button, form textarea, form select {
-        font-size: 13px !important;
-    }
 
     form label {
         font-size: 13px;
@@ -1902,3 +1868,4 @@ a {
 /*#endregion */
 
 @import "_dashboard.less";
+@import "_login.less";
