Adding basic login function and login errors.

--- a/client/src/client/styles/_login.less
+++ b/client/src/client/styles/_login.less
@@ -1,8 +1,17 @@
 // Styles for the Dashboard
 
 #login-view {
-  padding-top: 50px;
-
+  h1 {
+    margin-bottom: 20px;
+  }
+  p.big-error {
+    font-size: 21px;
+    margin: 10px 0;
+    color: #fff;
+    background-color: #d20000;
+    padding: 10px;
+    border-radius: 4px;
+  }
   .login-box {
     border: 1px solid #b9b9b9;
     padding: 10px;
