--- a/client/src/client/app/layout/ht-top-nav.html
+++ b/client/src/client/app/layout/ht-top-nav.html
@@ -9,13 +9,10 @@
   </div>
   <div class="navbar-collapse collapse" uib-collapse="isCollapsed">
     <div class="pull-right navbar-logo">
-      <ul class="nav navbar-nav pull-right">
+      <ul class="nav navbar-nav pull-right right-bar">
         <li class="user" ng-if="vm.user.username">
           <img src="/images/batuser.png" alt="">
           <span class="name">{{vm.user.username}}</span>
-        </li>
-        <li class="dropdown dropdown-big">
-          <a href="http://twitter.com/danielzm" target="_blank"></a>
         </li>
       </ul>
     </div>
