--- a/client/src/client/styles/styles.less
+++ b/client/src/client/styles/styles.less
@@ -1812,6 +1812,12 @@ a {
 /*#endregion */
 .navbar ul.right-bar {
   padding: 10px;
+  li.logout i {
+    font-size: 26px;
+    color: #fff;
+    margin-right: 10px;
+    margin-top: 4px;
+  }
   li.user {
     img {
       width: 30px;
