--- a/client/src/client/app/layout/ht-top-nav.html
+++ b/client/src/client/app/layout/ht-top-nav.html
@@ -10,6 +10,9 @@
   <div class="navbar-collapse collapse" uib-collapse="isCollapsed">
     <div class="pull-right navbar-logo">
       <ul class="nav navbar-nav pull-right right-bar">
+        <li class="logout" ng-click="vm.logout()">
+          <i class="fa fa-power-off" aria-hidden="true"></i>
+        </li>
         <li class="user" ng-if="vm.user.username">
           <img src="/images/batuser.png" alt="">
           <span class="name">{{vm.user.username}}</span>
