--- a/client/src/client/app/layout/ht-top-nav.html
+++ b/client/src/client/app/layout/ht-top-nav.html
@@ -9,14 +9,13 @@
   </div>
   <div class="navbar-collapse collapse" uib-collapse="isCollapsed">
     <div class="pull-right navbar-logo">
-      <ul class="nav navbar-nav pull-right">
-        <li>
-          <a ng-href="{{vm.navline.link}}" target="_blank">
-              {{vm.navline.text}}
-          </a>
+      <ul class="nav navbar-nav pull-right right-bar">
+        <li class="logout" ng-click="vm.logout()">
+          <i class="fa fa-power-off" aria-hidden="true"></i>
         </li>
-        <li class="dropdown dropdown-big">
-          <a href="http://twitter.com/danielzm" target="_blank"></a>
+        <li class="user" ng-if="vm.user.username">
+          <img src="/images/batuser.png" alt="">
+          <span class="name">{{vm.user.username}}</span>
         </li>
       </ul>
     </div>
