--- a/client/src/client/styles/_dashboard.less
+++ b/client/src/client/styles/_dashboard.less
@@ -18,6 +18,7 @@
         color: #000;
         text-transform: capitalize;
         font-family: @font-bold;
+        margin-bottom: 5px;
       }
       .description {
         font-size: 16px;
@@ -33,12 +34,18 @@
         right: 5px;
         bottom: 5px;
       }
+      .close {
+        position: absolute;
+        top: 5px;
+        right: 6px;
+        font-size: 25px;
+      }
     }
-    .close {
-      position: absolute;
-      top: 5px;
-      right: 6px;
-      font-size: 25px;
+    .edit-form {
+      .buttons {
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
     }
   }
 
