--- a/client/src/client/styles/styles.less
+++ b/client/src/client/styles/styles.less
@@ -5,6 +5,7 @@
 @color_important: #fa3031;
 @color_violet: #932ab6;
 
+@background_color: #f9f9f9;
 @font-bold: 'Oswald', sans-serif;
 @font-light: 'Raleway', sans-serif;
 
@@ -754,7 +755,7 @@ form {
     position: relative;
     margin-right: 0;
     width: auto;
-    background: #fff;
+    background: @background_color;
 }
 
     .mainbar .container {
@@ -1195,7 +1196,7 @@ form {
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 body {
-    background-color: #FFF;
+    background-color: @background_color;
 }
 
 .navbar-inverse {
