polish styles and function in dashboard.

--- a/client/src/client/styles/_dashboard.less
+++ b/client/src/client/styles/_dashboard.less
@@ -42,6 +42,9 @@
       }
     }
     .edit-form {
+      textarea {
+        margin-top: 10px;
+      }
       .buttons {
         margin-top: 5px;
         margin-bottom: 5px;
